# arianna-js

./: CHANGELOG.md  CONTRIBUTING_COMMITS.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
LICENSES/: COMMERCIAL.md  MIT.txt
additionals/: AI.ts  Animation.ts  Audio.ts  Colors.ts  Data.ts  Docs.ts  Finance.ts  Geometry.js  Geometry.ts  IO.ts  Latex.ts  Math.ts  Network.ts  Three.js  Three.ts  Two.ts  Video.ts  index.js  index.ts
cli/: arianna-cli.mjs
components/: index.js  index.ts
components/audio/: AudioComponent.ts  AudioEditor.ts  AudioPlayer.ts  AudioTrackEditor.ts  ChannelStrip.ts  PianoRoll.ts  TransportBar.ts  index.ts
components/charts/: BarChart.ts  LineChart.ts  PieChart.ts
components/composite/: Chat.ts  index.ts
components/core/: Animation.ts  Control.ts  Theme.ts
components/data/: Table.ts  TreeView.ts
components/display/: Avatar.ts  Badge.ts  Banner.ts  Chip.ts  Divider.ts  Icon.ts  List.ts  ProgressBar.ts  ProgressCircular.ts  Skeleton.ts  Snackbar.ts  Tag.ts  Tooltip.ts
components/finance/: AlertBadge.ts  CandlestickChart.ts  DepthChart.ts  HeatmapChart.ts  LineChart.ts  OrderBook.ts  PnLChart.ts  RiskGauge.ts  (+5 more)
config/: arianna.config.js  arianna.config.ts
core/: Component.js  Component.ts  Context.ts  Core.ts  Directive.ts  Less.ts  Namespace.ts  Observable.ts  Real.ts  Rule.ts  SSR.ts  State.ts  Stylesheet.ts  Virtual.ts  Workers.ts  index.ts
projects/: migrate-tauri-to-npm.sh
projects/arianna-android/src-tauri/: Cargo.toml  tauri.conf.json
scripts/: build.mjs
types/: arianna-globals.d.ts  arianna.d.ts
(+149 files in other folders)
