[package]
name    = "arianna-android"
version = "0.1.0"
edition = "2021"
description = "AriannA Android app"

[lib]
crate-type = ["cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [
  "devtools",
] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

[profile.release]
codegen-units = 1
lto           = true
opt-level     = "s"
panic         = "abort"
strip         = true
